arreglando estilos de header y hero

--- a/src/Components/Layout/Header/Header.css
+++ b/src/Components/Layout/Header/Header.css
@@ -2,19 +2,27 @@ a{
     text-decoration: none;
 }
 
-.css-93hrkz-MuiPaper-root-MuiAppBar-root, .css-mdyg66-MuiModal-root-MuiDrawer-root .MuiDrawer-paper, .css-q3bifl{
-    background-color: rgba(213, 213, 213, 0.318) !important;
+.css-mdyg66-MuiModal-root-MuiDrawer-root .MuiDrawer-paper, .css-q3bifl{
+    background-color: black;
     box-shadow: none !important;
 }
 
 .css-q3bifl{
-    background-color: rgba(213, 213, 213, 0.318) !important;
+    background-color: black;
 }
 
 .css-5o9at3 .MuiDrawer-paper{
-    background-color: rgba(213, 213, 213, 0.318) !important;
+    background-color: black;
 }
 
 .logo{
     width: 50px;
+}
+
+.css-93hrkz-MuiPaper-root-MuiAppBar-root{
+    background-color: black !important;
+}
+
+.css-9sors8-MuiButtonBase-root-MuiIconButton-root{
+    color: white !important;
 }
