--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,10 @@
 * {
   margin: 0;
   padding: 0;
+  scroll-behavior: smooth;
   /* box-sizing: border-box; */
+}
+
+.css-1tsfq2p{
+  padding: 0 !important;
 }
